--- a/frontend/src/components/AuthNavBar/AuthNavBar.scss
+++ b/frontend/src/components/AuthNavBar/AuthNavBar.scss
@@ -16,7 +16,7 @@
 }
 
 #nav-content-container {
-    width: 92%;
+    width: 90%;
     display: flex;
     align-items: center;
     justify-content: space-between;
